# ppe-compliance-monitor

./: .gitignore  Makefile  README.md
.github/workflows/: build-eval.yml  pre-commit-autofix.yml  test-backend.yml
app/: .dockerignore
app/backend/: Dockerfile  README.md  app.py  database.py  dev-requirements.txt  llm.py  multimodel.py  pyproject.toml  requirements.txt  response.py  runtime.py
app/backend/chat/: __init__.py  graph.py  nodes.py  state.py
app/backend/chat/prompts/: __init__.py  _utils.py  clarifier.py  context_answer.py  router.py  sql_agent.py  sql_answer.py  sql_planner.py
app/backend/tests/: seed.py
app/backend/tools/: mcp_tools.py
app/data-image/: Dockerfile  export_models.py  upload.sh
app/data-image/config/: config.pbtxt
app/evals/: .dockerignore  Containerfile  README.md  database.py  db_seed_data.sql  eval_dataset.json  judge_model.py  load_seed.py  pyproject.toml  run_eval.py
app/evals/datasets/ppe/: eval_dataset.json
app/frontend/src/: App.css  app.js  config.js
app/frontend/src/components/: ChatBot.js  (+6 more)
app/runtime/: Containerfile  create_runtime.py
app/video-stream-image/: Dockerfile
deploy/helm/label-studio/: Chart.yaml  values.yaml
deploy/helm/ppe-compliance-monitor/: Chart.yaml  values.yaml
deploy/local/: README-bird-model-refresh.md  README-model-refresh.md  import_model_weight.py  podman-compose.yaml  yolo-model-prep.sh
tenant/: README.md
tenant/bootstrap/: Chart.yaml  values.yaml
tenant/bootstrap/templates/: application-ppe.yaml
training/: README.md
training/example/: yolo_training.ipynb
(+30 files in other folders)
